--- a/receita-react/src/Cabeca.css
+++ b/receita-react/src/Cabeca.css
@@ -1,32 +1,37 @@
 
-Cabeca {
-    background-color: #b1625a; /* Fundo do cabeçalho */
-    width: 100%;
-    padding: 15px 30px;
+.Cabeca {
+    background-color: #090000;
+    color: #6b3232;
+    width: 30%;
+    padding: 3px 3px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-Cabeca h1 {
+.Cabeca-left {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.logo {
+    width: 20px; /* Reduz o tamanho do logo */
+    height: auto;
+}
+.Cabeca h1 {
     font-size: 1.2rem;
     font-weight: bold;
-    text-align: left;
+    margin: 0px;
 }
 
-Cabeca img {
-    width: 40px;
-    height: auto;
-    margin-right: 10px;
-}
-
-Cabeca .menu-icons {
+.menu-icons {
     display: flex;
-    gap: 15px;
+    gap: 20px;
 }
 
-Cabeca .menu-icons i {
-    font-size: 1.2rem;
+.menu-icons i {
+    font-size: 1.5rem;
     color: #181818;
     cursor: pointer;
 }
