criado os arquivos de categoria para receber a api e feito o processo para receber os dados da api, criado tambem seus estilos

--- a/receita-react/src/Cabeca.css
+++ b/receita-react/src/Cabeca.css
@@ -7,7 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    fontFamily: '"Roboto", "Helvetica", "Arial", sans-serif';
+    font-Family: '"Roboto", "Helvetica", "Arial", sans-serif';
 }
 
 .Cabeca-left {
